--- a/public/scss/_sections.scss
+++ b/public/scss/_sections.scss
@@ -831,6 +831,10 @@
         max-width: 74.5%;
         width: 100%;
 
+        .heading-section {
+          max-width: 56rem;
+        }
+
         .wg-counter {
           padding-left: 40px;
           margin-left: 68px;
